Apply Java 17/25 modernization, add READMEs, and update mindmap
Signed-off-by: Marvin Froeder <velo.br@gmail.com>