@@ -17,11 +17,8 @@ package feign.graphql;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import feign.MethodMetadata;
 import feign.Request.HttpMethod;
 import java.util.Base64;
-import java.util.Collection;
-import java.util.List;
 import org.junit.jupiter.api.Test;
 
 class GraphqlContractTest {
@@ -51,71 +48,71 @@ class GraphqlContractTest {
 
   @Test
   void mutationSetsPostMethod() {
-    List<MethodMetadata> metadata = contract.parseAndValidateMetadata(MutationApi.class);
+    var metadata = contract.parseAndValidateMetadata(MutationApi.class);
     assertThat(metadata).hasSize(1);
-    assertThat(metadata.get(0).template().method()).isEqualTo(HttpMethod.POST.name());
+    assertThat(metadata.getFirst().template().method()).isEqualTo(HttpMethod.POST.name());
   }
 
   @Test
   void mutationStoresQueryInHeader() {
-    List<MethodMetadata> metadata = contract.parseAndValidateMetadata(MutationApi.class);
-    Collection<String> queryHeaders =
-        metadata.get(0).template().headers().get(GraphqlContract.HEADER_GRAPHQL_QUERY);
+    var metadata = contract.parseAndValidateMetadata(MutationApi.class);
+    var queryHeaders =
+        metadata.getFirst().template().headers().get(GraphqlContract.HEADER_GRAPHQL_QUERY);
     assertThat(queryHeaders).isNotNull().hasSize(1);
 
-    String decoded = new String(Base64.getDecoder().decode(queryHeaders.iterator().next()));
+    var decoded = new String(Base64.getDecoder().decode(queryHeaders.iterator().next()));
     assertThat(decoded).contains("backendUpdateRuntimeStatus");
   }
 
   @Test
   void mutationExtractsOperationField() {
-    List<MethodMetadata> metadata = contract.parseAndValidateMetadata(MutationApi.class);
-    Collection<String> opHeaders =
-        metadata.get(0).template().headers().get(GraphqlContract.HEADER_GRAPHQL_OPERATION);
+    var metadata = contract.parseAndValidateMetadata(MutationApi.class);
+    var opHeaders =
+        metadata.getFirst().template().headers().get(GraphqlContract.HEADER_GRAPHQL_OPERATION);
     assertThat(opHeaders).isNotNull().hasSize(1);
     assertThat(opHeaders.iterator().next()).isEqualTo("backendUpdateRuntimeStatus");
   }
 
   @Test
   void mutationExtractsVariableName() {
-    List<MethodMetadata> metadata = contract.parseAndValidateMetadata(MutationApi.class);
-    Collection<String> varHeaders =
-        metadata.get(0).template().headers().get(GraphqlContract.HEADER_GRAPHQL_VARIABLE);
+    var metadata = contract.parseAndValidateMetadata(MutationApi.class);
+    var varHeaders =
+        metadata.getFirst().template().headers().get(GraphqlContract.HEADER_GRAPHQL_VARIABLE);
     assertThat(varHeaders).isNotNull().hasSize(1);
     assertThat(varHeaders.iterator().next()).isEqualTo("event");
   }
 
   @Test
   void queryExtractsVariableAndOperation() {
-    List<MethodMetadata> metadata = contract.parseAndValidateMetadata(QueryWithVariableApi.class);
+    var metadata = contract.parseAndValidateMetadata(QueryWithVariableApi.class);
     assertThat(metadata).hasSize(1);
 
-    Collection<String> opHeaders =
-        metadata.get(0).template().headers().get(GraphqlContract.HEADER_GRAPHQL_OPERATION);
+    var opHeaders =
+        metadata.getFirst().template().headers().get(GraphqlContract.HEADER_GRAPHQL_OPERATION);
     assertThat(opHeaders.iterator().next()).isEqualTo("backendProjectsLookup");
 
-    Collection<String> varHeaders =
-        metadata.get(0).template().headers().get(GraphqlContract.HEADER_GRAPHQL_VARIABLE);
+    var varHeaders =
+        metadata.getFirst().template().headers().get(GraphqlContract.HEADER_GRAPHQL_VARIABLE);
     assertThat(varHeaders.iterator().next()).isEqualTo("projectId");
   }
 
   @Test
   void noVariableQueryHasNoVariableHeader() {
-    List<MethodMetadata> metadata = contract.parseAndValidateMetadata(NoVariableQueryApi.class);
+    var metadata = contract.parseAndValidateMetadata(NoVariableQueryApi.class);
     assertThat(metadata).hasSize(1);
 
-    Collection<String> varHeaders =
-        metadata.get(0).template().headers().get(GraphqlContract.HEADER_GRAPHQL_VARIABLE);
+    var varHeaders =
+        metadata.getFirst().template().headers().get(GraphqlContract.HEADER_GRAPHQL_VARIABLE);
     assertThat(varHeaders).isNull();
 
-    Collection<String> opHeaders =
-        metadata.get(0).template().headers().get(GraphqlContract.HEADER_GRAPHQL_OPERATION);
+    var opHeaders =
+        metadata.getFirst().template().headers().get(GraphqlContract.HEADER_GRAPHQL_OPERATION);
     assertThat(opHeaders.iterator().next()).isEqualTo("backendPendingDeployments");
   }
 
   @Test
   void extractOperationFieldFromMutation() {
-    String query =
+    var query =
         "mutation backendUpdateRuntimeStatus($event: RuntimeStatusInput!) {"
             + " backendUpdateRuntimeStatus(event: $event) { _uuid } }";
     assertThat(GraphqlContract.extractOperationField(query))
@@ -124,25 +121,25 @@ class GraphqlContractTest {
 
   @Test
   void extractOperationFieldFromSimpleQuery() {
-    String query = "query backendPendingDeployments { backendPendingDeployments { projectId } }";
+    var query = "query backendPendingDeployments { backendPendingDeployments { projectId } }";
     assertThat(GraphqlContract.extractOperationField(query)).isEqualTo("backendPendingDeployments");
   }
 
   @Test
   void extractOperationFieldFromAnonymousQuery() {
-    String query = "{ user(id: \"1\") { id name } }";
+    var query = "{ user(id: \"1\") { id name } }";
     assertThat(GraphqlContract.extractOperationField(query)).isEqualTo("user");
   }
 
   @Test
   void extractFirstVariableFromMutation() {
-    String query = "mutation backendUpdateRuntimeStatus($event: RuntimeStatusInput!) { x }";
+    var query = "mutation backendUpdateRuntimeStatus($event: RuntimeStatusInput!) { x }";
     assertThat(GraphqlContract.extractFirstVariable(query)).isEqualTo("event");
   }
 
   @Test
   void extractFirstVariableReturnsNullWhenNone() {
-    String query = "query backendPendingDeployments { x }";
+    var query = "query backendPendingDeployments { x }";
     assertThat(GraphqlContract.extractFirstVariable(query)).isNull();
   }
 }
